--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea
-db.sqlite3
+Teste2.db
 venv
 .env
 */__pychache__/
@@ -65,7 +65,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+Teste2.db
 db.sqlite3-journal
 
 # Flask stuff:
